--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Assignment Two</title>
 </head>
-<body class="inter-font">
+<body class="inter-font" style="background-color: black;">
     <header>
        <!-- nav html start here -->
          <nav class="nav-bar">
@@ -25,7 +25,7 @@
          <div>
             <div class="banner-container">
                 <div class="banner-box">
-                     <h3 class="banner-titel">Get body in<br> shape & stay<br> healthy</h3>
+                     <h3 class="banner-titel">Get body in<br> <span class="shape">shape</span> & stay<br> healthy</h3>
                      <p class="banner-p">ave you ever known someone in really great shape who was constantly trying out every new fad diet? Yeah, I didn’t think so. Because for the most part, fit people don’t diet—they make healthy eating a part of their lifestyle.</p>
                      <div>
                         <div style="display: flex;">
@@ -54,7 +54,50 @@
       </section>
     </header>
     <main>
-      
+      <!-- habits html start here -->
+      <section>
+         <div class="habbit-box">
+            <h3 class="habit-titel">Change Your Habits</h3>
+            <p class="habbit-discription">We are what we repeatedly do. Excellence, then, is not an act, but a habit. –Aristotle Introduction Have you ever stopped to think about your habits or how they impact your daily life? </p>
+
+            <div class="habit-item-boxs">
+               <div>
+                  <img src="images/image3.png" alt="loading...">
+                  <h3>Movement</h3>
+                  <p>At Movement, we believe we can change the world by helping each other recognize and become our best selves.</p>
+               </div>
+               <div>
+                  <img src="images/image2.png" alt="loading">
+                  <h3>Time</h3>
+                  <p>Many timers allow you to program specific workout intervals, such as Tabata, EMOM, and rounds, to suit your training needs.</p>
+               </div>
+               <div>
+                  <img src="images/image4.png" alt="loading">
+                  <h3>Practice</h3>
+                  <p>Book your gym space in advance, as availability can be limited. The City of Kitchener’s “Book a Gym” program allows you to reserve space for up to 10 people, with a maximum of one booking per week.
+                  </p>
+               </div>
+               <div>
+                  <img src="images/image5.png" alt="loading">
+                  <h3>Weight Loss</h3>
+                  <p> Incorporate compound exercises like squats, deadlifts, and bench press, which work multiple muscles at once. Perform 10-12 reps and 3-4 sets of each exercise, resting for 60 seconds or less between sets.</p>
+               </div>
+             </div>
+         </div>
+      </section>
+      <section>
+         <div class="run-box">
+            <div class="about-run">
+               <h3>Run an Extra <br>
+                  Mile Easily</h3>
+               <p class="run-p">Increase your running distance by no more than 10% each week to allow your body to adapt. This gradual progression helps build endurance and reduces the risk of injury or burnout.</p>
+               <buttom id="join-now">Join Now</buttom>
+            </div>
+            <div>
+               <img src="images/run.jpg" alt="loading">
+            </div>
+         </div>
+      </section>
     </main>
     <footer>
         
