--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Assignment Two</title>
 </head>
-<body class="inter-font body-size" style="background-color: black;">
+<body class="inter-font body-size" style="background-color: black; max-width: 1920px; width: 100%;">
     <header>
        <!-- nav html start here -->
          <nav class="nav-bar">
