--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Assignment Two</title>
 </head>
-<body class="inter-font body-size" style="background-color: black; max-width: 1920px; width: 100%;">
+<body class="inter-font body-size" style="background-color: black;">
     <header>
        <!-- nav html start here -->
          <nav class="nav-bar">
@@ -209,7 +209,50 @@
    <section>
       <!-- creative section from bashar-->
       <div class="creative-section">
+         <h3 class="food-title">The Ultimate Gym Diet Plan</h3>
+         <p class="about-healthy-food">When it comes to nutrition, things can become overly complicated. However, it is clear that nutrition has a huge impact on the progress that you make in the gym</p>
 
+         <div class="food-items">
+           <div class="food-item">
+            <div>
+               <img src="images/pancakes.jpg" alt="loading..." class="food-image">
+            </div>
+            <div class="food-information">
+               <h3 class="food-name">Breakfast</h3>
+               <p class="food-detalis">Oats Banana Pancakes with
+                  Protein Shake
+             </p>
+            </div>
+           </div>
+           <div class="food-item">
+            <div>
+               <img src="images/protein.jpg" alt="loading..." class="food-image">
+            </div>
+            <div class="food-information">
+               <h3 class="food-name">Lunch</h3>
+               <p class="food-detalis">Whole Grain Chicken Wrap
+                  Black Beans, Peppers & Greek Yogurt</p>
+            </div>
+           </div>
+           <div class="food-item">
+            <div>
+               <img src="images/Fruits.jpg" alt="loading..." class="food-image">
+            </div>
+            <div class="food-information">
+               <h3 class="food-name">Pre-Workout Snack</h3>
+               <p class="food-detalis">Granola or Cereal or Mixed Nuts & Dried Fruits or Toast with Peanut Butter</p>
+            </div>
+           </div>
+           <div class="food-item">
+            <div>
+               <img src="images/rice.jpg" alt="" class="food-image">
+           </div>
+           <div class="food-information">
+            <h3 class="food-name">Dinner</h3>
+            <p class="food-detalis">Fish curry, boiled green peas salad Brown Rice Garden Peas Milk</p>
+           </div>
+           </div>
+         </div>
       </div>
    </section>
     </main>
