--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Assignment Two</title>
 </head>
 <body class="inter-font body-size" style="background-color: black;">
@@ -12,8 +13,11 @@
          <nav class="nav-bar">
             <div class="nav-position">
                <h3 class="nav-name">Fitness</h3>
-
-               <ul class="nav-items">
+                
+               <ul class="material-symbols-outlined">
+                  <li><svg xmlns="http://www.w3.org/2000/svg" height="40px" viewBox="0 -960 960 960" width="40px" fill="#e8eaed"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></li>
+               </ul>
+               <ul class="nav-items hide1">
                   <li><a href="" class="nav-item special-icon">Home</a></li>
                   <li><a href="" class="nav-item">Service</a></li>
                   <li><a href="" class="nav-item">Contact</a></li>
@@ -26,9 +30,9 @@
             <div class="banner-container">
                 <div class="banner-box">
                      <h3 class="banner-titel">Get body in<br> <span class="dancing-script-font">shape</span> & stay <br>healthy</h3>
-                     <p class="banner-p">ave you ever known someone in really great shape who was constantly trying out every new fad diet? Yeah, I didn’t think so. Because for the most part, fit people don’t diet—they make healthy eating a part of their lifestyle.</p>
+                     <p class="banner-p">You ever known someone in really great shape who was constantly trying out every new fad diet? Yeah, I didn’t think so. Because for the most part, fit people don’t diet—they make healthy eating a part of their lifestyle.</p>
                      <div>
-                        <div style="display: flex;">
+                        <div style="display: flex;" class="nav-btns">
                             <button class="btn-1 share-button">Join Club Now!</button>
                             <button class="btn-2">Download App</button>
                         </div>
@@ -91,7 +95,7 @@
                <h3>Run an Extra <br>
                   Mile Easily</h3>
                <p class="run-p">Increase your running distance by no more than 10% each week to allow your body to adapt. This gradual progression helps build endurance and reduces the risk of injury or burnout.</p>
-               <buttom id="join-now">Join Now</buttom>
+               <buttom class="join-now">Join Now</buttom>
             </div>
             <div>
                <img src="images/run.jpg" alt="loading">
@@ -112,11 +116,11 @@
       
                   <table>
                      <tr>
-                        <th>BMI</th>
-                        <th>Weight Status</th>
+                        <th class="calculator-title">BMI</th>
+                        <th class="calculator-title">Weight Status</th>
                      </tr>
                      <tr>
-                        <td>blow 18.5</td>
+                        <td >blow 18.5</td>
                         <td>Underweight</td>
                      </tr>
                      <tr>
@@ -206,7 +210,7 @@
             </div>
        </div>
    </div>  
-   <section>
+   <section class="hide">
       <!-- creative section from bashar-->
       <div class="creative-section">
          <h3 class="food-title">The Ultimate Gym Diet Plan</h3>
@@ -256,14 +260,12 @@
       </div>
    </section>
     </main>
-    <footer>
+    <footer class="hide">
         <div class="footer-box">
          <div class="footer-box1">
             <h3 class="footer-title1">Fitness</h3>
             <p>
-               We believe fitness should be accessible to everyone,
-               everywhere, regardless of income or access to a gym. With
-               hundreds of professional workouts.
+               Welcome to Anytime Fitness Springfield! Locally owned and operated, our welcoming gym offers you a supportive community to reach your health and wellness goals. Our expert coaches and staff are ready to help you every step of the way, including a free fitness consultation and personalized plan.
             </p>
          </div>
          <div class="footer-box2">
