aktu baki ase sudu

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             </div>
        </div>
    </div>  
-   <section class="hide">
+   <section>
       <!-- creative section from bashar-->
       <div class="creative-section">
          <h3 class="food-title">The Ultimate Gym Diet Plan</h3>
@@ -243,7 +243,7 @@
                <img src="images/Fruits.jpg" alt="loading..." class="food-image">
             </div>
             <div class="food-information">
-               <h3 class="food-name">Pre-Workout Snack</h3>
+               <h3 class="food-name food-name-s">Pre-Workout Snack</h3>
                <p class="food-detalis">Granola or Cereal or Mixed Nuts & Dried Fruits or Toast with Peanut Butter</p>
             </div>
            </div>
@@ -260,7 +260,7 @@
       </div>
    </section>
     </main>
-    <footer class="hide">
+    <footer>
         <div class="footer-box">
          <div class="footer-box1">
             <h3 class="footer-title1">Fitness</h3>
