--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <img src="images/Images2.png" alt="loading..">
                   
                       <span class="button-picture">
-                        <div class="kisu-bolar-nai-vai"></div>
+                        <div class="kisu-bolar-nai-vai"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="m380-300 280-180-280-180v360ZM480-80q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"/></svg></div>
                         <div class="text-direction">
                            <span class="mew-one">350+</span><br>
                            <span class="video-tutorial">Video tutorial</span>
@@ -151,7 +151,7 @@
                         <option value="female">Female</option>
                         <option value="Custom">Custom</option>
                      </select>
-                     <select name="activity" id="" style="width: 203%;">
+                     <select name="activity" id="x-1" style="width: 203%;">
                         <option value="" disabled selected>Select an activity factor</option>
                         <option value="Chose-1">Chose-1</option>
                         <option value="Chose-2">Chose-2"</option>
@@ -161,7 +161,7 @@
                 </div>
          </div>
         </section>
-
+ <section class="team-section">
     <div class="team-container"> 
          <h3 class="team-title-one">Meet Our Team</h3>
          <p class="team-description-one">Meet the team concept of diverse office people waving hello. Business men and women group for corporate portrait or staff presentation.</p>
@@ -203,13 +203,14 @@
             </div>
             <div class="team-image">
                <img src="images/trainer6.png" alt="loading...">
-               <span class="name-position">
+               <span class="name-position name-position-s">
                      <h3 class="member-name">Theresa Webb</h3>
                      <p class="member-position">Trainer</p>
                </span>
             </div>
        </div>
    </div>  
+ </section>
    <section>
       <!-- creative section from bashar-->
       <div class="creative-section">
@@ -223,8 +224,7 @@
             </div>
             <div class="food-information">
                <h3 class="food-name">Breakfast</h3>
-               <p class="food-detalis">Oats Banana Pancakes with
-                  Protein Shake
+               <p class="food-detalis food-detalis-s">Oats Banana Pancakes with Protein Shake
              </p>
             </div>
            </div>
